<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="name">Nama</string>
    <string name="description">Description</string>
    <string name="search">Search</string>
    <string name="insert_movie">Insert Movie</string>

    <string name="change_language_settings">Change Language</string>


    <string name="title">Title</string>
    <string name="rating">Rating</string>
    <string name="language">Language</string>
    <string name="release_date">Release Date</string>
    <string name="overview">Overview</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="favorite">Favorite</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="refresh">Refresh</string>
    <string name="add_widget">Add widget</string>
    <string name="appwidget_text">FAVORITE MOVIE BANNER</string>
    <string name="empty_text">NO DATA</string>
    <string name="change_reminder_settings">Reminder Setting</string>
    <string name="notif_release">release today</string>
    <string name="daily_reminder_content_text">Come back to Movie Cataloge</string>

</resources>
